[tool.poetry]
name = "cipher_ml4837"
version = "0.1.1"
description = "A package for doing great things!"
authors = ["Leong Mun Yee Elizabeth"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sphinx = "^5.3.0"
sqlalchemy = "^1.4.42"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
myst-nb = "^0.17.1"
sphinx-autoapi = "^2.0.0"
sphinx-rtd-theme = "^1.1.0"
pytest = "^7.2.0"


[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
default = false
secondary = false

[tool.pytest.ini_options]
pythonpath = [
  "src/cipher_ml4837",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
