[tool.poetry]
name = "springerprojectdraft"
version = "0.1.0"
description = ""
authors = ["elizabethleong <elizabeth.leong@columbia.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
numpy = "^1.23.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
myst-nb = "^0.17.1"
sphinx-autoapi = "^2.0.0"
sphinx-rtd-theme = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

